# promptEVAL

./: README.md  handle_keys.py  requirements.txt
LTL/: README.md  query.smv
LTL/_build/: log
LTL/corrected_version/: synthesis-algorithm.txt
LTL/corrected_version/ltlutils/: compile-project  dune-project  ltlutils.opam  output_ltl_formulas.csv  query.smv
LTL/corrected_version/ltlutils/_build/default/: ltlutils.dune-package  ltlutils.install
LTL/corrected_version/ltlutils/_build/default/lib/: Lexer.ml  Lexer.mll  Parser.ml  ast.ml  ltlutils.cma  ltlutils.ml-gen  parserinterface.ml  traceast.ml  tracelexer.ml  tracelexer.mll  traceparser.ml  traceparser__mock.ml.mock  traceparser__mock.mli.inferred  traceparserinterface.ml
LTL/corrected_version/ltlutils/exprunner/: exp_runner.cpp
LTL/corrected_version/ltlutils/test/: dune
data/input_data/: ast_test.csv  nl2ltl.csv  nl2pl.csv  nl2pl_data.csv  past_ast.csv  past_test.csv  textbook_test.csv  trace_ast_test.csv  wff.csv  wff_finalized.csv
experiment/: nl2futureltl.py  nl2pastltl.py  nl2pl.py  test_trace_characterization.py  trace_characterization.py  trace_generation.py  wff.py
output/detailed/: nl2ltl_detailed_results.csv  nl2ltl_raw_responses.csv  nl2ltl_summary_results.csv
output/nl2pl/: nl2pl_detailed_aggregated_results.csv  nl2pl_detailed_detailed_evaluation_results.csv  nl2pl_detailed_raw_responses.csv
prompts/detailed/: nl2ltl_prompt.py  (+6 more)
scripts/: entail_equiv_analyzer.py  load_data.py  ltl_extractor.py  save_results.py  semantic_checker.py  trace_characterization_eval.py  trace_satisfaction.py
(+22 files in other folders)
